# dependencyscanner

./: CMakeLists.txt  README.md
include/: androiddependencyextractor.h  dependency.h  dependencyextractor.h  textutils.h
src/: androiddependencyextractor.cpp  check.cpp  dependencyextractor.cpp  qtpluginresolver.cpp  textutils.cpp
